--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,21 @@
 .modal-dark .modal-backdrop {
   background-color: #131313;
 }
+@font-face {
+  font-family: 'tedFont';
+  src: url('../fonts/PierSans-FreeForPersonalUse/PierSans-Regular.otf');
+}
+
+p {
+  font-family: 'tedFont' ;
+}
+
+h5{
+  font-family: 'tedFont';
+}
 
 body {
-  font-family: "Muli", sans-serif;
+  font-family: 'tedFont';
   font-weight: normal;
   font-style: normal;
   background-image: url("../img/black_bg3.jpg");
@@ -84,7 +96,7 @@ button {
 
 /* line 52, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
 h1, h2, h3, h4, h5 {
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   color: #001D38;
 }
 
@@ -99,19 +111,19 @@ h6 a {
 }
 
 /* line 64, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
-a {
+/* a {
   font-family: "Muli", sans-serif;
-}
+} */
 
 /* line 67, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
-input::placeholder {
+/* input::placeholder {
   font-family: "Muli", sans-serif;
-}
+} */
 
 /* line 70, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
-textarea::placeholder {
+/* textarea::placeholder {
   font-family: "Muli", sans-serif;
-}
+} */
 
 /* line 73, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
 ul {
@@ -132,7 +144,7 @@ p {
   margin-bottom: 0;
   font-weight: 400;
   margin-bottom: 0px;
-  font-family: "Muli", sans-serif;
+  /* font-family: "Muli", sans-serif; */
 }
 
 /* line 90, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
@@ -198,10 +210,6 @@ h3 {
 }
 
 /* line 136, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
-.black_bg {
- 
-
-}
 
 /* line 139, ../../Arafath/CL/December/236. Event-02/HTML/scss/theme-default.scss */
 .mb-65 {
@@ -495,7 +503,7 @@ h3 {
   color: #FF4533;
   display: inline-block;
   padding: 12px 44px;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   font-size: 16px;
   font-weight: 400;
   border: 0;
@@ -530,7 +538,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 14px 35px;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   font-size: 20px;
   font-weight: 500;
   border: 0;
@@ -572,7 +580,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 13px 27px;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   font-size: 16px;
   font-weight: 600;
   border: 0;
@@ -618,7 +626,7 @@ h3 {
   color: #fff !important;
   display: inline-block;
   padding: 14px 47px;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   font-size: 16px;
   font-weight: 500;
   border: 0;
@@ -661,7 +669,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 18px 24px;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   font-size: 16px;
   font-weight: 600;
   border: 0;
@@ -792,7 +800,7 @@ h3 {
   margin-bottom: 0;
   font-weight: 400;
   margin-bottom: 0px;
-  font-family: "Muli", sans-serif;
+  /* font-family: "Muli", sans-serif; */
 }
 
 @media (max-width: 767px) {
@@ -807,7 +815,7 @@ h3 {
   font-size: 30px;
   font-weight: 400;
   color: #FF4533;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   margin-bottom: 0;
 }
 
@@ -1160,7 +1168,7 @@ h3 {
 /* line 100, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .buy_tkt .book_btn a {
   background: #FF4533;
-  font-family: "Anton", sans-serif;
+  /* font-family: "Anton", sans-serif; */
   padding: 12px 46px;
   font-size: 16px;
   font-weight: 400;
@@ -1188,6 +1196,7 @@ h3 {
 
 /* line 122, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu {
+  margin: 3%;
   text-align: center;
 }
 
@@ -1195,32 +1204,32 @@ h3 {
 .header-area .main-header-area .main-menu ul li {
   display: inline-block;
   position: relative;
-  margin: 0 16px;
+  margin: 0 5px;
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
   /* line 126, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
   .header-area .main-header-area .main-menu ul li {
-    margin: 0 8px;
+    margin: 0 6px;
   }
 }
 
 @media (min-width: 1200px) and (max-width: 1500px) {
   /* line 126, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
   .header-area .main-header-area .main-menu ul li {
-    margin: 0 15px;
+    margin: 0 10px;
   }
 }
 
 /* line 139, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a {
   color: #fff;
-  font-size: 20px;
+  font-size: 10px;
   text-transform: capitalize;
-  font-weight: 400;
+  font-weight: 200;
   display: inline-block;
-  padding: 30px 0 30px  0;
-  font-family: "Anton", sans-serif;
+  padding: 10px 0 10px  0;
+  /* font-family: "Anton", sans-serif; */
   position: relative;
   text-transform: uppercase;
 }
@@ -1228,14 +1237,14 @@ h3 {
 @media (min-width: 992px) and (max-width: 1200px) {
   /* line 139, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
   .header-area .main-header-area .main-menu ul li a {
-    font-size: 15px;
+    font-size: 13px;
   }
 }
 
 @media (min-width: 1200px) and (max-width: 1500px) {
   /* line 139, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
   .header-area .main-header-area .main-menu ul li a {
-    font-size: 15px;
+    font-size: 13px;
   }
 }
 
@@ -1624,7 +1633,7 @@ h3 {
 
 /* line 65, ../../Arafath/CL/December/236. Event-02/HTML/scss/_slider.scss */
 .slider_area .single_slider .slider_text h3 {
-  font-family: "Halvetica" , Arial;
+  /* font-family: "Halvetica" , Arial; */
   font-size: 122px;
   font-weight: 850;
   color: #FF4533;
@@ -1653,7 +1662,7 @@ h3 {
   }
 }
 #x{
-  font-family: "Halvetica" , Arial;
+  /* font-family: "Halvetica" , Arial; */
   font-size: 100px;
   font-weight: 800;
   color: #FF4533;
