--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,25 @@
 
 
 @media (min-width: 200px) and (max-width: 700px) {
+  .regHeading h3{
+    font-size: 30px;
+  }
+  .contact-section{
+    padding: 3%;
+  }
+}
+@media (min-width: 700) and (max-width: 1000px) {
+  .regHeading h3{
+    font-size: 350px;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1800px) {
+  .regHeading h3{
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 200px) and (max-width: 700px) {
   .mainSpeakersList div{
     margin-left: auto;
     margin-right: auto;
@@ -782,7 +801,7 @@ h3 {
 
 /* line 2, ../../Arafath/CL/December/236. Event-02/HTML/scss/_section_title.scss */
 .section_title h3 {
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 400;
   color: #fff;
   position: relative;
@@ -2967,7 +2986,7 @@ h3 {
 @media (max-width: 991px) {
   /* line 133, ../../Arafath/CL/December/236. Event-02/HTML/scss/_contact.scss */
   .contact-section {
-    padding: 70px 0 40px;
+    padding: 70px 20px 40px;
   }
 }
 
