--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,21 @@
     margin-right: auto;
   }  
 }
-@media (min-width: 400px) and (max-width: 700px) {
+@media (min-width: 400px) and (max-width: 850px) {
   /* line 69, ../../Arafath/CL/December/236. Event-02/HTML/scss/_bradcam.scss */
   #themeHeading {
     font-size: 40px;
   }
 }
 
-@media (min-width: 700px) and (max-width: 1600px) {
+@media (min-width: 850px) and (max-width: 1200px) {
+  /* line 69, ../../Arafath/CL/December/236. Event-02/HTML/scss/_bradcam.scss */
+  #themeHeading {
+    font-size: 60px;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1600px) {
   /* line 69, ../../Arafath/CL/December/236. Event-02/HTML/scss/_bradcam.scss */
   #themeHeading {
     font-size: 90px;
@@ -1601,12 +1608,14 @@ h3 {
     background-image: url(../img/banner/banner.png);
     max-height: 600px;
   }
+  
 }
 @media (min-width: 450px) and (max-width: 700px){
   .slider_bg_1 {
     background-image: url(../img/banner/banner2.png);
     max-height: 600px;
   }
+  
 }
 /* line 4, ../../Arafath/CL/December/236. Event-02/HTML/scss/_slider.scss */
 .slider_bg_2 {
@@ -1649,7 +1658,7 @@ h3 {
 @media (max-width: 767px) {
   /* line 21, ../../Arafath/CL/December/236. Event-02/HTML/scss/_slider.scss */
   .slider_area .single_slider .slider_text {
-    margin: 130px 0 80px 0;
+    margin: 240px 0 80px 0;
   }
 }
 @media (min-width: 768px) and (max-width: 1000px) {
